add langchain full scratch

--- a/2_use_prompt.ipynb
+++ b/2_use_prompt.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "source": [
     "## Using PromptTemplate\n",
-    "### Dùng cho các tình huống bình thường, dơn giản"
+    "### Dùng cho các tình huống bình thường, đơn giản"
    ]
   },
   {
